@@ -73,6 +73,30 @@ for my $cond ([], [bulk_insert => 0]) {
         is scalar @$rows, 2;
         is $rows->[0]{name}, 'エクスカリパー';
     };
+
+    subtest 'delete' => sub {
+        my $m = DBIx::FixtureLoader->new(
+            dbh => $dbh,
+            update => 1,
+        );
+        $m->load_fixture('t/data/item-3.json', delete => 1);
+
+        my $rows = $dbh->selectall_arrayref('SELECT * FROM item;', {Slice => {}});
+        is scalar @$rows, 1;
+    };
+
+
+    subtest 'delete2' => sub {
+        my $m = DBIx::FixtureLoader->new(
+            dbh => $dbh,
+            delete => 1,
+        );
+        $m->load_fixture('t/data/item-2.yml');
+
+        my $rows = $dbh->selectall_arrayref('SELECT * FROM item;', {Slice => {}});
+        is scalar @$rows, 2;
+    };
+
 }
 
 done_testing;
